New base faces for 'veiled woman'

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+New faces for 'veiled woman'
+Nicolas Weeger 2022-01-06
+
 New faces for nightmare, move current faces to clsc
 monster/undead/nightmare.base.111.png
 monster/undead/nightmare.base.112.png
