--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-New faces for 'veiled woman', 'veiled woman 2'
+New faces for 'veiled woman', 'veiled woman 2', 'veiled woman 3'
 Nicolas Weeger 2022-01-06
 
 New faces for nightmare, move current faces to clsc
