Prevent gods from appearing in readables

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Prevent gods from appearing in readables
+Nicolas Weeger 2022-05-21
+
 New base faces for 'veiled woman', 'veiled woman 2', 'veiled woman 3', 'child', 'crone'
 Nicolas Weeger 2022-01-06
 
