Use a Gervais tile to provide an image to the classic face set for Firebrand.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Use a Gervais flaming sword image to replace the Firebrand in the classic face set.
+Need to take the time to animate the flame, but it is a start.
+weapon/artifact/firebrand.clsc.111.png
+weapon/artifact/firebrand.clsc.112.png
+weapon/artifact/firebrand.clsc.113.png
+weapon/artifact/firebrand.clsc.LICENSE
+Daniel Hawkins 2022-06-15
+
 Prevent gods from appearing in readables
 Nicolas Weeger 2022-05-21
 
