--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+New art for steaks.
+Additional arch for a cooked version of the steak.
+Additional recipe for cooking the steak with some salt.
+food/drag_steak.base.111.png
+food/drag_steak.clsc.111.png
+food/drag_steak_cooked.base.111.png
+food/drag_steak.arc
+formulae
+Daniel Hawkins 2022-11-22
+
 Add plural name to bolt of silk.
 Multiple stacks of silk will now appear as bolts of silk.
 misc/item/bolt_silk.arc
