--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+New art for dragon's wings.
+Added a recolored version of the old art to the classic face set.
+flesh/dragon/big_dragon_dragon_wing.base.111.png
+flesh/dragon/big_dragon_dragon_wing.base.LICENSE
+flesh/dragon/big_dragon_dragon_wing.clsc.111.png
+flesh/dragon/big_dragon_dragon_wing.face
+Daniel Hawkins 2023-02-12
+
 New art for steaks.
 Additional arch for a cooked version of the steak.
 Additional recipe for cooking the steak with some salt.
