Add a message to describe writing a spell scroll.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+New message to describe writing spell scrolls.
+messages
+Daniel Hawkins 2023-03-17
+
 New cutlery items.
 Meant to be part of the valuables that are less than gems but better than coins,
 that Draug's been talking about would be necessary to rebalance sale prices.
