--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+New artifact armor: apron of the Butcher
+artifacts
+Daniel Hawkins 2023-08-09
+
 Replace topaz image with an animated version.
 Touched every topaz file in the process of adding an animation and changing the face.
 jewel/gems/topaz.*
