--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+New arch: random_converter.
+Meant to be used with the addition of pop-up banks in random maps, but may have other uses
+as well. Leans toward gold/silver tables, with a small chance of higher denominations.
+random/randomConverter.arc
+random/randomConverter.base.111.png
+random/randomConverter.trs
+Daniel Hawkins 2023-08-11
+
 New artifact armor: apron of the Butcher
 artifacts
 Daniel Hawkins 2023-08-09
