Image license file for checkered-black_gray floor tile, released under cc-by-3.0 license

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Image license file for checkered-black_gray floor tile
+Released under cc-by-3.0 license
+floor/checkered-black_gray.base.LICENSE
+Rick Tanner 2023-10-13
+
 New wall segment: flagstone_win0
 Flagstone wall now has a vertical wall segment with a window
 wall/flagstone/flagstone_win0.base.111.png
